# boxyncd

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  build.rs
.github/scripts/: manage-doc-versions.sh
.github/workflows/: docs.yml  release.yml
config/: boxyncd.example.toml
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/guide/: configuration.md  installation.md  usage.md
docs/theme/: version-selector.js
migrations/: 20250211000000_initial.sql  20260216000000_add_trash_columns.sql
src/: config.rs  db.rs  main.rs  service.rs
src/auth/: mod.rs  oauth.rs  token_store.rs
src/box_api/: client.rs  events.rs  files.rs  folders.rs  mod.rs  types.rs
src/service/: mod.rs  smf.rs  systemd.rs
src/sync/: conflict.rs  downloader.rs  local_watcher.rs  mod.rs  reconciler.rs  remote_watcher.rs  state.rs  trash.rs  uploader.rs
src/util/: hash.rs  mod.rs  path.rs
systemd/: boxyncd.service
